Fix local Nexmark Q8 Kafka execution